// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppointmentModal AppointmentModal should render correctly 1`] = `
<Modal
  afterClose={[MockFunction]}
  size="medium"
  visible={true}
>
  <div>
    <div>
      Ref:
      BED1600597
    </div>
    <div
      key="BED1600597"
    >
      <h3>
        Chase MacLean
      </h3>
      <div>
         
        65
         
        Lindsey Close
         
        Great Denham
         
        Bedford
         
        Bedfordshire
         
        MK40 4GT
         
      </div>
      <div
        className="my-5"
      >
        <div
          key="0"
        >
          <div>
            <TiMail />
            <a
              href="mailto:chase.maclean@reapitestates.net"
            >
              chase.maclean@reapitestates.net
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      key="BED1600597"
    >
      <h3>
        Chase MacLean
      </h3>
      <div>
         
        65
         
        Lindsey Close
         
        Great Denham
         
        Bedford
         
        Bedfordshire
         
        MK40 4GT
         
      </div>
      <div
        className="my-5"
      >
        <div
          key="0"
        >
          <div>
            <TiMail />
            <a
              href="mailto:chase.maclean@reapitestates.net"
            >
              chase.maclean@reapitestates.net
            </a>
          </div>
        </div>
      </div>
    </div>
    <div>
      18 Dec 2016 04:30 PM - 05:30 PM
      , 
      65
       
      Lindsey Close
    </div>
  </div>
</Modal>
`;

exports[`AppointmentModal AppointmentModal should render correctly when loading 1`] = `
<Modal
  afterClose={[MockFunction]}
  size="medium"
  visible={true}
>
  <Loader />
</Modal>
`;

exports[`AppointmentModal renderAddress should matchSnapshot 1`] = `
<div>
  <div>
     
    65
     
    Lindsey Close
     
    Great Denham
     
    Bedford
     
    Bedfordshire
     
    MK40 4GT
     
  </div>
</div>
`;

exports[`AppointmentModal renderAttendees should matchSnapshot 1`] = `
Array [
  <div>
    <h3>
      Chase MacLean
    </h3>
    <div
      className="my-5"
    >
      <div>
        <div>
          <TiMail />
          <a
            href="mailto:chase.maclean@reapitestates.net"
          >
            chase.maclean@reapitestates.net
          </a>
        </div>
      </div>
    </div>
  </div>,
  <div>
    <h3>
      Chase MacLean
    </h3>
    <div
      className="my-5"
    >
      <div>
        <div>
          <TiMail />
          <a
            href="mailto:chase.maclean@reapitestates.net"
          >
            chase.maclean@reapitestates.net
          </a>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`AppointmentModal renderCheckMark should match snapshot 1`] = `
<div>
  <TiTick />
</div>
`;

exports[`AppointmentModal renderCommunicationDetail should match snapshot 1`] = `
<div>
  <div
    key="0"
  >
    <div>
      <TiMail />
      <a
        href="mailto:chase.maclean@reapitestates.net"
      >
        chase.maclean@reapitestates.net
      </a>
    </div>
  </div>
</div>
`;

exports[`AppointmentModal renderCommunicationType should match snapshot 1`] = `
<div>
  <TiMail />
</div>
`;

exports[`AppointmentModal renderDirections should matchSnapshot 1`] = `
<div>
  <AppointmentTile
    heading="Directions"
    hightlight={false}
  >
    <div>
      123
    </div>
  </AppointmentTile>
</div>
`;

exports[`AppointmentModal renderNotes should matchSnapshot 1`] = `
<div>
  <div>
    <h5>
      Notes:
    </h5>
    <p>
      123
    </p>
  </div>
</div>
`;
